Solucionado problema de reporte calificaciones y futuramente reporte de sesion.